Replace Vector with List/ArrayList and add generics